# RDK2_AMS_TMF882x_Demo

./: .project  Makefile  README.md  main.c
.mtbLaunchConfigs/: RDK2_AMS_TMF882x_Demo Attach (JLink).launch  RDK2_AMS_TMF882x_Demo Attach (KitProg3_MiniProg4).launch  RDK2_AMS_TMF882x_Demo Debug (JLink).launch  RDK2_AMS_TMF882x_Demo Debug (KitProg3_MiniProg4).launch  RDK2_AMS_TMF882x_Demo Erase (JLink).launch  RDK2_AMS_TMF882x_Demo Erase (KitProg3_MiniProg4).launch  RDK2_AMS_TMF882x_Demo Program (JLink).launch  RDK2_AMS_TMF882x_Demo Program (KitProg3_MiniProg4).launch  RDK2_AMS_TOF8820_Example Attach (JLink).launch  RDK2_AMS_TOF8820_Example Attach (KitProg3_MiniProg4).launch  RDK2_AMS_TOF8820_Example Debug (JLink).launch  RDK2_AMS_TOF8820_Example Debug (KitProg3_MiniProg4).launch  RDK2_AMS_TOF8820_Example Erase (JLink).launch  RDK2_AMS_TOF8820_Example Erase (KitProg3_MiniProg4).launch  RDK2_AMS_TOF8820_Example Program (JLink).launch  RDK2_AMS_TOF8820_Example Program (KitProg3_MiniProg4).launch
AMS_TOF882x/Example/Simple/: tmf882x_example_simple.c  tmf882x_example_simple.h  tof_bin_image.c  tof_factory_cal.h
AMS_TOF882x/inc/: ams_rutdk2_i2c.h  mcu_tmf882x_config.h  platform_shim.h  platform_wrapper.h  tmf882x.h  tmf882x_clock_correction.h  tmf882x_config.h  tmf882x_interface.h  tmf882x_mode.h  tmf882x_mode_app.h  tmf882x_mode_app_ioctl.h  tmf882x_mode_app_protocol.h  tmf8x2x_application_registers.h
AMS_TOF882x/src/: CMakeLists.txt  ams_rutdk2_i2c.c  intel_hex_interpreter.c  platform_wrapper.c  tmf882x_clock_correction.c  tmf882x_interface.c  tmf882x_mode.c  tmf882x_mode_app.c  tmf882x_mode_bl.c
bsps/TARGET_APP_RDK2/: README.md
bsps/TARGET_RDK2/: props.json
rutdk2_hal_peripheral/: rutdk2_timer.c  rutdk2_timer.h
